--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "vue-router": "^3.4.9"
   },
   "scripts": {
-    "dev": "parcel ./src/index.html"
+    "dev": "parcel ./src/index.html",
+    "build": "parcel build ./src/index.html"
   },
   "devDependencies": {
     "@vue/component-compiler-utils": "^3.2.0",
